src/test/ui/dst/dst-rvalue.stderr
error[E0161]: cannot move a value of type str: the size of str cannot be statically determined
  --> $DIR/dst-rvalue.rs:6:28
   |
LL |     let _x: Box<str> = box *"hello world";
   |                            ^^^^^^^^^^^^^^

error[E0161]: cannot move a value of type [isize]: the size of [isize] cannot be statically determined
  --> $DIR/dst-rvalue.rs:11:32
   |
LL |     let _x: Box<[isize]> = box *array;
   |                                ^^^^^^

error[E0507]: cannot move out of a shared reference
  --> $DIR/dst-rvalue.rs:6:28
   |
LL |     let _x: Box<str> = box *"hello world";
   |                            ^^^^^^^^^^^^^^ move occurs because value has type `str`, which does not implement the `Copy` trait

error[E0508]: cannot move out of type `[isize]`, a non-copy slice
  --> $DIR/dst-rvalue.rs:11:32
   |
LL |     let _x: Box<[isize]> = box *array;
   |                                ^^^^^^
   |                                |
   |                                cannot move out of here
   |                                move occurs because `*array` has type `[isize]`, which does not implement the `Copy` trait

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0161, E0507, E0508.
For more information about an error, try `rustc --explain E0161`.
